[package]
name = "elemfi"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "elemfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
development = []
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["metadata"] }
